# policygate

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: main.rs  routes.rs  types.rs
docker/: api.Dockerfile  web.Dockerfile
engine/: Cargo.toml
engine/src/: eval.rs  lib.rs  model.rs
engine/tests/: eval_tests.rs
examples/: policy.yaml  request.json
tools/: generate-badges.mjs  package-lock.json  package.json
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts
